Fix reveal model bg z-index

--- a/app/assets/stylesheets/modules/generic.sass
+++ b/app/assets/stylesheets/modules/generic.sass
@@ -15,6 +15,10 @@ ul.no-style
 
 .reveal-modal
   border-radius: 4px
+  z-index: 101
+
+.reveal-modal-bg
+  z-index: 100
 
 .white
   background: white
